# sdk-python

./: .gitignore  Makefile  example.py  openapi.yml  pyproject.toml
example/: example.py
massbots/: __init__.py  api.py  error.py  models.py
massbots/models/: channel.py  channel_thumbnails.py  download_result.py  video.py  video_thumbnails.py
massbots/openapi/: __init__.py
massbots/openapi/models/: __init__.py  balance.py  channel.py  channel_thumbnails.py  download_result.py  error.py  thumbnail.py  video.py  video_format.py  video_thumbnails.py
models/: __init__.py  balance.py  channel.py  channel_thumbnails.py  error.py  video.py  video_thumbnails.py
