[tool.poetry]
name = "massbots"
version = "0.3.0"
description = "SDK for api.massbots.xyz"
authors = ["massbots-dev <sy.tgbot@gmail.com>"]
repository = "https://github.com/massbots/sdk"
readme = "README.md"
include = ["massbots/openapi/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
